// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Steps components ErroredStep renders correctly 1`] = `
<Bullseye>
  <EmptyState
    className="ins-c-sources__empty-state"
    variant="full"
  >
    <EmptyStateIcon
      color="var(--pf-global--danger-color--100)"
      icon={[Function]}
    />
    <Title
      headingLevel="h5"
      size="lg"
    >
      Configuration unsuccessful
    </Title>
    <EmptyStateBody>
      <Progress
        className="pf-u-mb-md"
        id=""
        label="Step 1: create source"
        max={0}
        measureLocation="top"
        min={0}
        size={null}
        title=" "
        value={0}
        valueText="Step 1: create source"
        variant="danger"
      />
      <TextContent>
        <Text
          variant="p"
        >
          Your source has not been successfully added:
        </Text>
      </TextContent>
    </EmptyStateBody>
    <Component
      onClick={[MockFunction]}
      variant="primary"
    >
      Go back to my application
    </Component>
    <EmptyStateSecondaryActions>
      <Component
        onClick={[MockFunction]}
        variant="link"
      >
        Retry
      </Component>
    </EmptyStateSecondaryActions>
  </EmptyState>
</Bullseye>
`;

exports[`Steps components FinishedStep renders correctly 1`] = `
<div
  className="pf-l-bullseye"
>
  <EmptyState
    className="ins-c-sources__empty-state"
    variant="full"
  >
    <EmptyStateIcon
      color="var(--pf-global--success-color--100)"
      icon={[Function]}
    />
    <Title
      headingLevel="h5"
      size="lg"
    >
      Configuration successful
    </Title>
    <EmptyStateBody>
      <Progress
        className="pf-u-mb-md"
        id=""
        label="Completed"
        max={0}
        measureLocation="top"
        min={0}
        size={null}
        title=" "
        value={0}
        valueText="Completed"
        variant="success"
      />
      Here I Am
    </EmptyStateBody>
    <Component
      onClick={[MockFunction]}
      variant="primary"
    >
      Go back to my application
    </Component>
    <EmptyStateSecondaryActions>
      <a
        href="/hybrid/settings/sources"
      >
        <Component
          variant="link"
        >
          Take me to sources
        </Component>
      </a>
    </EmptyStateSecondaryActions>
  </EmptyState>
</div>
`;

exports[`Steps components FinishedStep renders withou takemetosources button 1`] = `
<div
  className="pf-l-bullseye"
>
  <EmptyState
    className="ins-c-sources__empty-state"
    variant="full"
  >
    <EmptyStateIcon
      color="var(--pf-global--success-color--100)"
      icon={[Function]}
    />
    <Title
      headingLevel="h5"
      size="lg"
    >
      Configuration successful
    </Title>
    <EmptyStateBody>
      <Progress
        className="pf-u-mb-md"
        id=""
        label="Completed"
        max={0}
        measureLocation="top"
        min={0}
        size={null}
        title=" "
        value={0}
        valueText="Completed"
        variant="success"
      />
      Here I Am
    </EmptyStateBody>
    <Component
      onClick={[MockFunction]}
      variant="primary"
    >
      Go back to my application
    </Component>
  </EmptyState>
</div>
`;

exports[`Steps components LoadingStep renders correctly 1`] = `
<Bullseye>
  <EmptyState
    className="ins-c-sources__empty-state"
    variant="full"
  >
    <Spinner />
    <EmptyStateBody>
      Loading, please wait.
    </EmptyStateBody>
  </EmptyState>
</Bullseye>
`;

exports[`Steps components LoadingStep renders correctly with custom props 1`] = `
<Bullseye>
  <EmptyState
    className="ins-c-sources__empty-state"
    variant="full"
  >
    <Spinner />
    <EmptyStateBody>
      Here I Am
    </EmptyStateBody>
    <EmptyStateSecondaryActions>
      <Component
        onClick={[MockFunction]}
        variant="link"
      >
        Cancel
      </Component>
    </EmptyStateSecondaryActions>
  </EmptyState>
</Bullseye>
`;

exports[`Steps components LoadingStep renders correctly with progress bar 1`] = `
<Bullseye>
  <EmptyState
    className="ins-c-sources__empty-state"
    variant="full"
  >
    <Spinner />
    <EmptyStateBody>
      Loading, please wait.
    </EmptyStateBody>
  </EmptyState>
</Bullseye>
`;
